# product-fastapi-test

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
src/: __main__.py  config.py
src/api/: api.py  main.py  session.py
src/api/products/: __init__.py  models.py  service.py  views.py
src/app/product_service/: __init__.py  exceptions.py  get_product.py  get_products.py  helper.py  remove_product.py  save_product.py  update_product.py
src/app/product_service/schema/: __init__.py  product_schema.py  sort_enum.py
src/database/: __init__.py
src/database/databease_types/: __init__.py  _id_mixin.py
src/database/tables/: __init__.py  _base.py  _product.py
src/db_migrations/: env.py
