[tool.poetry]
name = "fastapi-products"
version = "0.1.0"
description = "Products App"
authors = ["Andiemen Akomaye Peter <andiemen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.9"
pydantic = "^2.5.2"
uvicorn = "^0.24.0.post1"
typer = "^0.9.0"
pydantic-settings = "^2.1.0"
loguru = "^0.7.2"
fastapi = "^0.104.1"
asyncio = "^3.4.3"
sqlalchemy-filters = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
